Updated to GS 2.9-beta (and Java 8)